<resources>
    <string name="app_name">Football Apps</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="match_scores">\u0020 - : -</string>
    <string name="match_scores2"> - : -</string>
    <string name="match_detail">Match Detail</string>
    <string name="home_scores">34\':Kevin-Prince Boateng\n38\':Pol Lirola\n41\':Khouma Babacar\n45\':Khouma Babacar\n62\':Gian Marco Ferrari</string>
    <string name="away_scores">31\':Rogerio\n33\':Giangiacomo Magnani\n90\':Alfred Duncan\n</string>
    <string name="lineups">Line-ups</string>
    <string name="home_lineup">Stefano Sorrentino\nFabio Depaoli\n Nenad Tomovic\n Luca Rossettini\n Federico Barba\nNicola Rigoni\n Ivan Radovanovic\n Joel Chukwuma Obi\nValter Birsa\n Mariusz Stepinski\n Emanuele Giaccherini\n</string>
    <string name="away_lineup">Pietro Terracciano\nGiovanni Di Lorenzo\n Matias Silvestre\n Domenico Maietta\n Luca Antonelli\nRade Krunic\n Leonardo Capezzi\n Afriyie Acquah\n Miha Zajc\nFrancesco Caputo\n Antonino La Gumina\n</string>
    <string name="subs">Substitutes</string>
    <string name="yellow">Yellow Cards</string>
    <string name="red">Red Cards</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="blank_scores">\u0020%1$s : %2$s</string>
    <string name="blank_scores2">%1$s : %2$s</string>
    <string name="blank">\u0020%1$s</string>
    <string name="empty">\u0020</string>
    <string name="favourites">Favourites</string>
    <string name="favourite_added">Favourite has been added.</string>
    <string name="favourite_remove">Favourite has been removed.</string>
    <string name="table_empty">You haven\'t saved your favourites matches.</string>
    <string name="favourite_removed">Favourite has been removed.</string>
    <string name="menu_league_spinner">Leagues</string>
    <string name="search_team">Search</string>
    <string name="list_team">Teams</string>
    <string name="error_add_favourite">Error happen when favourite inserted.</string>
    <string name="error_remove_favourite">Error happer when favourite removed.</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="date_demo">Thu, 11 Oct 2018</string>
    <string name="time_demo">22:00</string>
    <string name="zero">0</string>
    <string name="no_desc">There is no description about this team.</string>
    <string name="name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="position">Position</string>
    <string name="place_birth">Place of birth</string>
    <string name="born_date">Born</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="team_favourite_added">Team Favourite has beed added.</string>
    <string name="team_favourite_removed">Team Favourite has been removed.</string>
    <string name="search_result_empty">There are no result for query you inputted.</string>
    <string name="nullvalue">Null</string>

    <string-array name="leagues">
        <item>Italian Serie A</item>
        <item>English Premier League</item>
        <item>Spanish La Liga</item>
        <item>German Bundesliga</item>
        <item>French Ligue 1</item>
    </string-array>

    <string-array name="code_leagues">
        <item>4332</item>
        <item>4328</item>
        <item>4335</item>
        <item>4331</item>
        <item>4334</item>
    </string-array>

</resources>
