<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_list_team"
        android:enabled="true"
        android:icon="@drawable/ic_round_list_24px"
        android:title="@string/list_team"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_search_team"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_48px"
        android:title="@string/search_team"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_round_favorite_24px"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />
</menu>