<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_8dp">

        <LinearLayout
            android:id="@+id/logo_atas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_padding_4dp">
            <ImageView
                android:id="@+id/img_home_team"
                android:layout_width="@dimen/match_list_badge_dimen"
                android:layout_height="@dimen/match_list_badge_dimen" />
            <TextView
                android:id="@+id/tv_home_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_padding_8dp"
                android:paddingEnd="@dimen/margin_padding_8dp"
                android:text="@string/home_team"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logo_bawah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_padding_4dp"
            android:layout_below="@id/logo_atas">
            <ImageView
                android:id="@+id/img_away_team"
                android:layout_width="@dimen/match_list_badge_dimen"
                android:layout_height="@dimen/match_list_badge_dimen" />
            <TextView
                android:id="@+id/tv_away_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_padding_8dp"
                android:paddingEnd="@dimen/margin_padding_8dp"
                android:text="@string/away_team"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@id/layout_score"
            android:paddingEnd="@dimen/margin_padding_16dp"
            android:paddingStart="@dimen/margin_padding_8dp">
            <TextView
                android:id="@+id/tv_match_date"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/match_list_badge_dimen"
                android:text="@string/date_demo"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:textSize="@dimen/text_size_12sp"/>
            <TextView
                android:id="@+id/tv_match_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/match_list_badge_dimen"
                android:text="@string/time_demo"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:paddingStart="@dimen/margin_padding_8dp"
            android:paddingEnd="@dimen/margin_padding_8dp">
            <TextView
                android:id="@+id/tv_home_scores"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/match_list_badge_dimen"
                android:text="@string/zero"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="@dimen/margin_padding_4dp"/>
            <TextView
                android:id="@+id/tv_away_scores"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/match_list_badge_dimen"
                android:text="@string/zero"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="@dimen/margin_padding_4dp"/>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_4dp"
        android:background="@drawable/shadow"
        android:layout_below="@id/layout_container"/>
</RelativeLayout>