<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.teams.teamDetail.teamPlayers.playerDetail.PlayerDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_padding_16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/player_detail_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_player_detail"
                    android:layout_width="@dimen/player_detail_photo_dimen"
                    android:layout_height="@dimen/player_detail_photo_dimen"
                    android:scaleType="fitXY"/>
                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/player_bio_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/margin_padding_16dp"
                        android:paddingEnd="@dimen/margin_padding_8dp"
                        android:gravity="center">
                        <!-- Name -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/margin_padding_2dp">
                            <TextView
                                android:layout_width="@dimen/player_detail_field_width"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/gray"/>
                            <TextView
                                android:id="@+id/tv_player_name_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- Nationality -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/margin_padding_2dp">
                            <TextView
                                android:layout_width="@dimen/player_detail_field_width"
                                android:layout_height="wrap_content"
                                android:text="@string/nationality"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/gray" />
                            <TextView
                                android:id="@+id/tv_player_nationality"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- Position -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/margin_padding_2dp">
                            <TextView
                                android:layout_width="@dimen/player_detail_field_width"
                                android:layout_height="wrap_content"
                                android:text="@string/position"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/gray" />
                            <TextView
                                android:id="@+id/tv_player_position_detail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- Place of Birth -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/margin_padding_2dp">
                            <TextView
                                android:layout_width="@dimen/player_detail_field_width"
                                android:layout_height="wrap_content"
                                android:text="@string/place_birth"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/gray" />
                            <TextView
                                android:id="@+id/tv_player_place_birth"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- Born -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/margin_padding_2dp">
                            <TextView
                                android:layout_width="@dimen/player_detail_field_width"
                                android:layout_height="wrap_content"
                                android:text="@string/born_date"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/gray" />
                            <TextView
                                android:id="@+id/tv_player_born"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- Height -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/margin_padding_2dp">
                            <TextView
                                android:layout_width="@dimen/player_detail_field_width"
                                android:layout_height="wrap_content"
                                android:text="@string/height"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/gray" />
                            <TextView
                                android:id="@+id/tv_player_height"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- Weight -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/margin_padding_2dp">
                            <TextView
                                android:layout_width="@dimen/player_detail_field_width"
                                android:layout_height="wrap_content"
                                android:text="@string/weight"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/gray" />
                            <TextView
                                android:id="@+id/tv_player_weight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_padding_16dp"
            android:layout_marginRight="@dimen/margin_padding_16dp">

            <TextView
                android:id="@+id/tv_player_detail_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/home_team"
                android:paddingTop="@dimen/margin_padding_8dp"
                android:paddingBottom="@dimen/margin_padding_8dp"
                android:paddingStart="@dimen/margin_padding_4dp"
                android:paddingEnd="@dimen/margin_padding_4dp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>